--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=demo
+
+# PostgreSQL Konfiguration
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventory
+spring.datasource.username=demo
+spring.datasource.password=demo
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
